# glyfada

./: CMakeLists.txt  logging.h  optimiser.cpp  optimiser_heterogeneous.cpp  optimiser_homogenous.cpp  optimiser_homogenous_2.cpp  parametersDH.json  parametersMUH3.json  parameterslbnl.json  run_cosy.cpp  run_cosy.h  run_dh.cpp  run_dh.h  run_g4bl.cpp  run_g4bl.h
examples/: parametersDH.json
mpi/: SerializableBase.h  SerializableBase.tpp  schema.cpp  schema.h  xml_parser.cpp
utils/: Logging.cpp  Logging.h  Utilities.cpp  Utilities.h  json_utilities.h
